09.Ingress/nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: labex-nginx-svc
spec:
  ports:
  - port: 81
    targetPort: 80
  selector:
    app: nginx
