09.Ingress/tomcat-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: labex-tomcat-svc
spec:
  ports:
  - port: 82
    targetPort: 8080
  selector:
    app: tomcat
