09.Ingress/multi-ingress-2-hosts.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: labex-multi-ingress
spec:
  rules:
  - host: nginx.labex.com
    http:
      paths:
      - path: /
        backend:
          serviceName: labex-nginx-svc
          servicePort: 81
  - host: tomcat.labex.com
    http:
      paths:
      - path: /
        backend:
          serviceName: labex-tomcat-svc
          servicePort: 82
