09.Ingress/nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: labex-nginx-ingress
spec:
  rules:
  - host: www.labex.com
    http:
      paths:
      - path: /
        backend:
          serviceName: labex-nginx-svc 
          servicePort: 81
